# -knowledge-extraction-toolset

./: README.md  pyproject.toml
config/agents/: knowledge_extraction.conf  summarization.conf
src/knowledge_extract_toolset/: __init__.py  app.py  constants.py  text_splitter.py  web-app.py
src/knowledge_extract_toolset/ai_agent/: __init__.py  base.py  config.py
src/knowledge_extract_toolset/ai_agent/agents/: __init__.py  knowledge_extraction_agent.py  summarization_agent.py
src/knowledge_extract_toolset/ai_agent/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py
src/knowledge_extract_toolset/data_sources/: __init__.py  data_source.py  file_data_source.py  text_input_data_source.py  wikipedia_data_source.py
src/knowledge_extract_toolset/text_splitter/: __init__.py  base.py  factory.py  strategies.py  ui.py
tests/: test_ai_agent.py  test_text_splitter.py  test_wikipedia_api.py
